--- a/similar-products/src/main/resources/messages.properties
+++ b/similar-products/src/main/resources/messages.properties
@@ -8,3 +8,11 @@ domain.exception.productId.value.negative.message=ProductId value must be positi
 domain.exception.productName.value.notNull.message=ProductName value must not be null
 domain.exception.productPrice.value.negative.message=ProductPrice value must be positive
 domain.exception.similar.productId.notNull.message=Similar ProductId value must not be null
+
+# --- ProductNotFoundException Errors
+domain.exception.product.notFound.api.error=Not Found
+
+# --- GenericProductException Errors ---
+domain.exception.generic.400.api.error=Client Error
+domain.exception.generic.500.api.error=Internal Api Error
+domain.exception.generic.timeout.api.error=TimeOut Api Error
